--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,10 @@
 }
 
 .navbar-nav {
+  background: -webkit-linear-gradient(left top, lightgray, white); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, lightgray, white); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, lightgray, white); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, lightgray, white); /* Standard syntax */
   margin-top: 10px;
 }
 
