--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -43,7 +43,9 @@
           %ul.dropdown-menu
             %li
               - if admin_signed_in?
+                = link_to 'Mass Signup', '/admin/mass_signup'
                 = link_to 'Logout', destroy_admin_session_path, method: :delete, class: 'delete'
               - else
                 = link_to 'Sign In', new_admin_session_path, method: :get
+%hr
 = render partial: 'layouts/register_modal'
