--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,7 +25,7 @@
     .collapse.navbar-collapse#nav-items.navbar-right
       %ul.nav.navbar-nav
         %li
-          = link_to("Latest", news_index_path, class: 'nav-item')
+          = link_to("Latest", '#latest', class: 'nav-item')
         %li
           = link_to("Bio", bio_index_path, class: 'nav-item')
         %li
