--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,32 +1,82 @@
+body {
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 .banner {
-  position: fixed;
-  height: 60%;
+  position: relative;
+  height: 650px;
+  margin: 0 auto;
   width: 100%;
-  top: 200px;
-  left: 0;
+  //top: 50px;
+  //left: 0;
   z-index: -1;
   background: image-url('cover.jpg');
-  background-size: 100px 100px;
-  background-attachment: fixed;
+  //background-size: 90% 180%;
+  //background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
-  -moz-background-size: contain;
-  -webkit-background-size: contain;
-  -o-background-size: contain;
-  background-size: contain;
+  //-moz-background-size: cover;
+  //-webkit-background-size: cover;
+  //-o-background-size: cover;
+  //background-size: cover;
 }
 
-.image-container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  height: 700px;
-  margin-top: 80px;
-  z-index: -1;
-}
-
-.image-container img {
-  border-radius: 15px;
+#latest {
+  background: image-url('latest.jpg');
+  background-repeat: no-repeat;
+  background-position: fixed;
+  background-size: 100% 100%;
+  min-height: 800px;
   width: 100%;
-  height: 100%;
+  position: relative;
 }
+
+.banner-space {
+  text-align: center;
+  z-index: 10;
+}
+
+.content-div {
+  max-width: 500px;
+}
+
+.blog-content {
+  max-width: 510px;
+  margin-right: 100px;
+}
+
+.posts {
+  max-height: 750px;
+  overflow-y: scroll;
+}
+
+.twitter-content {
+  max-height: 800px;
+  max-width: 800px;
+  overflow-y: scroll;
+}
+
+.tweet-content {
+  font-family: 'hai-lato';
+  background-color: black;
+  color: white;
+  opacity: 0.8;
+}
+
+.caption {
+  max-width: 500px;
+  font-family: 'hai-lato';
+  background-color: white;
+}
+
+.top-arrow {
+  text-align: center;
+}
+
+.top-arrow a {
+  color: black !important;
+}
+
