--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,17 +7,22 @@ body {
 
 .banner {
   position: relative;
-  height: 650px;
-  margin: 0 auto;
-  width: 100%;
+  //height: 650px;
+  //margin: 0 auto;
+  //width: 100%;
   //top: 50px;
   //left: 0;
   z-index: -1;
-  background: image-url('cover.jpg');
+  background: image-url('cover.jpg') 50% 0 no-repeat fixed; min-height: 650px;
+  height: 650px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1920px;
+  position: relative;
   //background-size: 90% 180%;
   //background-attachment: fixed;
-  background-position: center center;
-  background-repeat: no-repeat;
+  //background-position: center center;
+  //background-repeat: no-repeat;
   //-moz-background-size: cover;
   //-webkit-background-size: cover;
   //-o-background-size: cover;
@@ -25,18 +30,24 @@ body {
 }
 
 #latest {
-  background: image-url('latest.jpg');
-  background-repeat: no-repeat;
-  background-position: fixed;
-  background-size: 100% 100%;
-  min-height: 800px;
+  background: image-url('latest.jpg') 50% 0 no-repeat fixed; min-height: 600px;
+  height: 600px;
+  margin: 0 auto;
   width: 100%;
   position: relative;
+  -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
+  box-shadow: 0 0 50px rgba(0,0,0,0.8);
+  //background-position: fixed;
+  background-size: 100% 100%;
+  //min-height: 600px;
+  //width: 100%;
+  //position: relative;
 }
 
-.banner-space {
-  text-align: center;
-  z-index: 10;
+.content-container {
+  height: 500px;
+  position: absolute;
+  top: 150px;
 }
 
 .content-div {
@@ -45,11 +56,11 @@ body {
 
 .blog-content {
   max-width: 510px;
-  margin-right: 100px;
+  margin-right: 150px;
 }
 
 .posts {
-  max-height: 750px;
+  max-height: 650px;
   overflow-y: scroll;
 }
 
@@ -80,3 +91,17 @@ body {
   color: black !important;
 }
 
+.banner-area {
+  height: 458px;
+  position: absolute;
+  top: 150px;
+  width: 100%;
+  text-align: center;
+  color: black;
+  margin-left: 800px;
+}
+
+.banner-area h2 {
+  background-color: rgba(255, 255, 255, 0.2);
+  max-width: 300px;
+}
