--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,12 @@
 %section#banner.pages.banner{'data-type' => 'background', 'data-speed' => '10'}
+  .banner-area
+    %h2.lato Charles Ellsworth
 %section#latest.pages.container-fluid.content-section{'data-type' => 'background', 'data-speed' => '10'}
   .row
     .col-lg-10.col-lg-offset-1
-      %h2.lato Latest
-      .top-arrow
-        %a.page-scroll{href: '#logo'}
-          = fa_icon 'arrow-circle-up 4x'
-      .latest-content
+      .content-container
+        %h2.lato Latest
+        .top-arrow
+          %a.page-scroll{href: '#logo'}
+            = fa_icon 'arrow-circle-up 2x'
+        .latest-content
