make mailing list work from modal

--- a/app/views/layouts/_register_modal.html.haml
+++ b/app/views/layouts/_register_modal.html.haml
@@ -3,9 +3,9 @@
     .modal-content
       .modal-body
         %h4 Join the mailing list
-        %form
+        %form#registration_form
           .form-group
-            %input#register_email.form-control{placeholder: "Enter email", type: 'email'}
+            %input#register_email.form-control{name: 'email', placeholder: "Enter email", type: 'email'}
           .pull-right
             %button.btn.btn-default{type: 'button', 'data-dismiss' => 'modal'} Close
             %button.btn.btn-primary{type: 'submit'} Submit
