--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,3 +65,15 @@
 .title {
   font-size: 20px;
 }
+
+.sign-in {
+  margin-top: 100px;
+}
+
+.black {
+  color: black !important;
+}
+
+.white {
+  color: white !important;
+}
