--- a/app/assets/stylesheets/media.css.scss
+++ b/app/assets/stylesheets/media.css.scss
@@ -20,8 +20,9 @@
 }
 
 #video {
-  background: image-url('video.jpg') 50% 0 no-repeat; min-height: 600px;
-  height: 600px;
+  //background: image-url('video.jpg') 50% 0 no-repeat; min-height: 600px;
+  background-color: gray;
+  height: 800px;
   margin: 0 auto;
   width: 100%;
   position: relative;
@@ -31,8 +32,8 @@
 }
 
 #photo {
-  background: image-url('photo.jpg') 50% 0 no-repeat; min-height: 600px;
-  height: 600px;
+  background: image-url('photo.jpg') 50% 0 no-repeat; min-height: 800px;
+  height: 800px;
   margin: 0 auto;
   width: 100%;
   position: relative;
@@ -44,3 +45,17 @@
 .back-bar {
   background-color: rgba(0,0,0,.5);
 }
+
+.video-player {
+  height: 480px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+.youtube {
+  position: relative;
+  left: -50%;
+  top: -50%;
+}
+
