--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    = favicon_link_tag 'favicon.ico'
     %title Charles Ellsworth
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag "application"
