--- a/app/assets/stylesheets/media.css.scss
+++ b/app/assets/stylesheets/media.css.scss
@@ -59,3 +59,13 @@
   top: -50%;
 }
 
+
+.music-container {
+  position: absolute;
+  top: 30%;
+  left: 5%;
+}
+
+.music-player {
+  position: relative;
+}
