--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -29,7 +29,7 @@
         %li
           = link_to("Bio", bio_index_path, class: 'nav-item')
         %li
-          = link_to("Look & Listen", media_index_path, class: 'nav-item')
+          = link_to("Look & Listen", media_path, class: 'nav-item')
         %li
           = link_to("Shows", '/', class: 'nav-item')
         %li
