loader gif on latest section

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -88,3 +88,8 @@ body {
   background-color: rgba(255, 255, 255, 0.2);
   max-width: 300px;
 }
+
+.spinner {
+  margin-left: 50%;
+  width: 50px;
+}
