--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,6 +6,7 @@
     .col-lg-10.col-lg-offset-1
       .content-container
         %h2.lato Latest
+        %img.spinner{src: image_path('ajax-loader.gif')}
         .top-arrow
           %a.page-scroll{href: '#logo'}
             = fa_icon 'arrow-circle-up 2x'
