--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,18 +10,7 @@
         #logo.pull-left
           Charles Ellsworth
         .nav-header
-        #follow
-          = link_to "https://www.facebook.com/charles.b.ellsworth", {target: '_blank'} do
-            = fa_icon 'facebook'
-          = link_to "https://twitter.com/cellsworth54", {target: '_blank'} do
-            = fa_icon 'twitter'
-          = link_to "http://cellsworth54.tumblr.com", {target: '_blank'} do
-            = fa_icon 'tumblr'
-          = link_to "https://www.youtube.com/user/wanderingman54", {target: '_blank'} do
-            = fa_icon 'youtube'
-          = link_to "https://play.spotify.com/artist/31Ca3LzvrbaSP30RY36jxe?play=true&utm_source=open.spotify.com&utm_medium=open", {target: '_blank'} do
-            = fa_icon 'spotify'
-          %a#mailing_list{href: '#'} Join Mailing List
+        = render(partial: 'layouts/social_media_links', locals: {id: 'follow', classes: 'hidden-xs hidden-s'})
     .collapse.navbar-collapse#nav-items.navbar-right
       %ul.nav.navbar-nav
         %li
@@ -50,5 +39,7 @@
                 = link_to 'Logout', destroy_admin_session_path, method: :delete, class: 'delete'
               - else
                 = link_to 'Sign In', new_admin_session_path, method: :get
+        %li
+          = render(partial: 'layouts/social_media_links', locals: {id: 'no-follow', classes: 'visible-xs visible-s'})
 %hr
 = render partial: 'layouts/register_modal'
