make latest more responsive

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,4 +10,5 @@
         .top-arrow
           %a.page-scroll{href: '#logo'}
             = fa_icon 'arrow-circle-up 2x'
-        .latest-content
+        .container-fluid
+          .latest-content.row
