--- a/app/views/media/index.html.haml
+++ b/app/views/media/index.html.haml
@@ -29,10 +29,10 @@
                   - a['TRACKS'].each do |t|
                     .checkbox
                       %label
-                        %input.lato{type: 'checkbox', name: t['FILENAME']}
+                        %input.lato{"checked" => "checked", type: 'checkbox', name: t['FILENAME']}
                         = t['NAME']
           %button#purchase.btn.btn-default{type: 'Submit'} Purchase
-      .album-art.col-md-2
+      .album-art.col-md-2.col-xs-hidden
         - art = @albums['ALBUMS'].first['ART']
         - file = File.exists?("#{Rails.root}/app/assets/images/album_art/#{art}") ? art : "no_album_art.jpeg"
         %img.album-img{src: image_url("album_art/#{file}")}
@@ -95,3 +95,14 @@
         %iframe{:allowfullscreen => "", :frameborder => "0", :height => "480", :src => "//www.youtube.com/embed/videoseries?list=PLS1O71vdoxKKZ9zD7ThkCZrK054cM53u4", :width => "853"}
   .clearfix
   %section#photo{'data-type' => 'background', 'data-speed' => '10'}
+    .photos
+      #photo-carousel.carousel.slide{'data-ride' => 'carousel'}
+        .carousel-inner
+          - @photos.each_with_index do |p, i|
+            - active = i == 0 ? 'active' : 'not-active'
+            .item{class: active, "data-slide-number" => "#{i}"}
+              %img.img-responsive.img-sized{src: image_url("/assets/photos/#{p[:picture]}")}
+        %a.prev-button.left.carousel-control{"data-slide" => "prev", :href => "#carousel-prev", :role => "button"}
+          %span.glyphicon.glyphicon-chevron-left
+        %a.next-button.right.carousel-control{"data-slide" => "next", :href => "#carousel-next", :role => "button"}
+          %span.glyphicon.glyphicon-chevron-right
