responsive changes, link updates

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -23,9 +23,9 @@
         %li
           = link_to("Look & Listen", media_path, class: 'nav-item')
         %li
-          = link_to("Shows", '/', class: 'nav-item')
+          = link_to("Shows", shows_path, class: 'nav-item')
         %li
-          = link_to("Store", '/', class: 'nav-item')
+          = link_to("Store", 'http://wanderingman.bigcartel.com/', target: '_blank', class: 'nav-item')
         %li
           = link_to(contact_index_path, class: 'nav-item') do
             = fa_icon "envelope"
