minor content changes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,7 +42,11 @@
 }
 
 #registration_modal .modal-body {
-  height: 150px;
+  height: 650px;
+}
+
+.newsletter-picture {
+  height: 377px;
 }
 
 #mailing_list {
