--- a/app/assets/stylesheets/shows.css.scss
+++ b/app/assets/stylesheets/shows.css.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the Shows controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.shows {
+  margin-top: 50px;
+}
+
+.datepicker {
+  z-index: 1151 !important;
+}
+
+#add_show_modal .modal-body {
+  height: 500px;
+}
