show add / edit / delete as admin

--- a/app/assets/stylesheets/shows.css.scss
+++ b/app/assets/stylesheets/shows.css.scss
@@ -7,5 +7,14 @@
 }
 
 #add_show_modal .modal-body {
-  height: 500px;
+}
+
+.add_show_container {
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.edit-show {
+  margin-left: 25px;
 }
