--- a/app/assets/stylesheets/media.css.scss
+++ b/app/assets/stylesheets/media.css.scss
@@ -1,3 +1,40 @@
+@media (max-width: 1120px) {
+  .album-art {
+    display: none;
+  }
+}
+
+@media (max-width: 990px) {
+  .music-player {
+    padding-left: 0px;
+    padding-top: 15px;
+  }
+  .music-container {
+    padding-left: 0%;
+    padding-top: 2%;
+  }
+  .photos {
+    padding: 0 !important;
+    margin: 0;
+  }
+}
+
+@media (max-width: 800px) {
+  #video {
+    height: 500px !important;
+  }
+}
+
+@media (max-width: 400px) {
+  #video {
+    height: 300px !important;
+  }
+
+  #photo {
+    height: 300px !important;
+  }
+}
+
 .media-bar {
   text-align: center;
   z-index: 10;
@@ -12,16 +49,15 @@
   position: relative;
   z-index: -1;
   background: image-url('music.jpg') 50% 0 no-repeat fixed; min-height: 650px;
-  height: 650px;
   margin: 0 auto;
   width: 100%;
+  height: 850px;
   max-width: 1920px;
-  position: relative;
 }
 
 #video {
   //background: image-url('video.jpg') 50% 0 no-repeat; min-height: 600px;
-  background-color: gray;
+  background-color: lightgray;
   height: 800px;
   margin: 0 auto;
   width: 100%;
@@ -55,16 +91,30 @@
 
 .youtube {
   position: relative;
-  left: -50%;
-  top: -50%;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  padding-top: 10%;
+
 }
 
+.youtube iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+}
+
+.video-container {
+  padding-top: 60px;
+}
 
 .music-container {
   position: absolute;
   width: 100%;
-  top: 10%;
-  left: 5%;
+  padding-top: 5%;
+  padding-left: 5%;
 }
 
 .music-player {
@@ -73,9 +123,15 @@
 
 .catalog {
   position: relative;
-  max-height: 500px;
+  max-height: 550px;
+  max-width: 375px;
   background-color: rgba(255,255, 255, .4);
   margin-right: 2%;
+}
+
+.catalog-body {
+  max-height: 360px;
+  overflow-y: scroll;
 }
 
 .album-content {
@@ -104,11 +160,6 @@
   max-width: 800px;
   max-height: 800px;
   margin-top: 100px;
-  margin-left: 15%;
+  padding-left: 15%;
   position: absolute;
-}
-
-.img-sized {
-  width: 800px;
-  height: 450px;
 }
