--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,7 @@
         %span.icon-bar
       %a{href: '/'}
         #logo.pull-left
-          Charles Ellsworth
+          CHARLES ELLSWORTH
         .nav-header
         = render(partial: 'layouts/social_media_links', locals: {id: 'follow', classes: 'hidden-xs hidden-s'})
     .collapse.navbar-collapse#nav-items.navbar-right
