--- a/app/views/layouts/_latest.html.haml
+++ b/app/views/layouts/_latest.html.haml
@@ -1,6 +1,6 @@
-.blog-content.col-md-6
+.blog-content.col-md-6.col-sm-12
   .title.lato Blog
-  .posts
+  #tumblr.posts
     - @recent_posts.each do |post|
       - caption = post['caption']
       .blog-content-div
@@ -10,20 +10,21 @@
             = caption
         - else
           %p
-        - case post['type']
-        - when 'video'
-          %iframe{src: post['player'][1]['embed_code'].split('src=').last.split("width").first.gsub("\"",'').strip, width: '500', height: '500', frameborder: '0', scrolling: 'no'}
-        - when 'photo'
-          - photo = post['photos'].first['alt_sizes'].select { |key| key['width'] == 500 }.first
-          %img{src: photo['url']}
-        - else
-          Other
+        .tubmlr-media
+          - case post['type']
+          - when 'video'
+            %iframe{src: post['player'][1]['embed_code'].split('src=').last.split("width").first.gsub("\"",'').strip, width: '500', height: '500', frameborder: '0', scrolling: 'no'}
+          - when 'photo'
+            - photo = post['photos'].first['alt_sizes'].select { |key| key['width'] == 500 }.first
+            %img{src: photo['url']}
+          - else
+            Other
         %br
         %br
-.twitter-content.col-md-6
+.twitter-content.col-md-6.col-sm-12
   .twitter-header.lato.title
     = fa_icon 'twitter 2x', text: 'Twitter'
-  .posts
+  #twitter.posts
     - @tweets.each do |tweet|
       .tweet-content
         = tweet.full_text
