make responsive work

--- a/app/views/layouts/no_header.html.haml
+++ b/app/views/layouts/no_header.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+  %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", :name => "viewport"}/
     %title Charles Ellsworth
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag "application"
