--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     = favicon_link_tag 'favicon.ico'
+    %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", :name => "viewport"}/
     %title Charles Ellsworth
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag "application"
