--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,5 +14,5 @@
           %a#twitter_anchor.page-scroll{href: '#twitter'}
             = fa_icon 'twitter 2x'
         %img.spinner{src: image_path('ajax-loader.gif')}
-        .container-fluid
+        #latest_content.container-fluid
           .latest-content.row
